<resources>
    <string name="app_name">DingRTC API Example</string>
    <string name="base_function">Base Function</string>
    <string name="base_function_audiocall">Audio Call</string>
    <string name="base_function_videocall">Video Call</string>
    <string name="advanced_function">Advance Function</string>
    <string name="advanced_function_rtm">Real Time Message</string>
    <string name="advanced_function_audiogroup">Audio Group</string>
    <string name="advanced_function_whiteboard">Whiteboard</string>
    <string name="advanced_function_speechenhance">Speech Enhance</string>
    <string name="advanced_function_screenshare">ScreenShare</string>
    <string name="advanced_function_virtual_background">Virtual Background</string>
    <string name="advanced_function_beauty">Beauty</string>
    <string name="advanced_function_external_video_source">External Video Source</string>
    <string name="advanced_function_external_audio_source">External Audio Source</string>
    <string name="advanced_function_raw_video_data">Raw Video Data</string>
    <string name="advanced_function_raw_audio_data">Raw Audio Data</string>
    <string name="advanced_function_subtitle">Subtitle</string>
    <string name="advanced_function_switch_screen">Switch Screen</string>
    <string name="advanced_function_video_setting">Video Setting</string>
    <string name="advanced_function_audio_setting">Audio Setting</string>
    <string name="advanced_function_audio_mixing">Audio Mixing</string>
    <string name="advanced_function_multiview_render">Multiview Render</string>
    <string name="advanced_function_pic_in_pic">Pic In Pic</string>
    <string name="advanced_function_audio_device_test">Audio Device Test</string>
    <string name="advanced_function_video_render_setting">Video Render Setting</string>
    <string name="advanced_function_token_privilege_setting">Token Privilege Setting</string>
    <string name="advanced_function_audio_route">Audio Route Setting</string>
    <string name="advanced_function_audio_custom_render">Custom Audio Render</string>
    <string name="advanced_function_audio_custom_capture">Custom Audio Capture</string>
    <string name="advanced_function_audio_volume_indication">Audio Volume Indication</string>
    <string name="advanced_function_rtc_stats">RTC Media Stats</string>
</resources>
