<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@android:color/black"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:gravity="left"
            android:text="@string/base_function"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/view_video_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:orientation="vertical"
            android:paddingLeft="15dp"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/base_function_videocall"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:gravity="left"
            android:text="@string/advanced_function"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:id="@+id/view_rtm"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_function_rtm"
                android:textColor="@android:color/black"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/view_audiogroup"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_function_audiogroup"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/view_whiteboard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_function_whiteboard"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/view_speechenhance"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_function_speechenhance"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/view_screenshare"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_function_screenshare"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/view_virtual_background"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_function_virtual_background"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/view_beauty"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/button_bg"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="15dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/advanced_function_beauty"
                android:textColor="@android:color/black"
                android:textSize="16sp" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>